--- a/gestion_clients.ui
+++ b/gestion_clients.ui
@@ -68,7 +68,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;
       <enum>QTabWidget::Triangular</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>3</number>
      </property>
      <property name="tabsClosable">
       <bool>true</bool>
@@ -90,7 +90,9 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
+        <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;
+
+</string>
        </property>
        <property name="text">
         <string>Ajouter</string>
@@ -107,7 +109,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;
         <rect>
          <x>40</x>
          <y>40</y>
-         <width>271</width>
+         <width>311</width>
          <height>29</height>
         </rect>
        </property>
@@ -118,7 +120,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>donner le code:</string>
+           <string>donner le code       :</string>
           </property>
          </widget>
         </item>
@@ -136,7 +138,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;
         <rect>
          <x>40</x>
          <y>90</y>
-         <width>271</width>
+         <width>311</width>
          <height>29</height>
         </rect>
        </property>
@@ -147,7 +149,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>donner le nom:</string>
+           <string>donner le nom        :</string>
           </property>
          </widget>
         </item>
@@ -165,7 +167,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;
         <rect>
          <x>40</x>
          <y>140</y>
-         <width>271</width>
+         <width>311</width>
          <height>29</height>
         </rect>
        </property>
@@ -176,7 +178,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>donner le prenom:</string>
+           <string>donner le prenom   :</string>
           </property>
          </widget>
         </item>
@@ -194,7 +196,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;
         <rect>
          <x>40</x>
          <y>190</y>
-         <width>271</width>
+         <width>311</width>
          <height>29</height>
         </rect>
        </property>
@@ -223,7 +225,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;
         <rect>
          <x>40</x>
          <y>240</y>
-         <width>271</width>
+         <width>311</width>
          <height>29</height>
         </rect>
        </property>
@@ -234,7 +236,7 @@ font: 75 10pt &quot;MS Shell Dlg 2&quot;;
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>donner le mail:</string>
+           <string>donner le mail        :</string>
           </property>
          </widget>
         </item>
@@ -362,7 +364,7 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <rect>
          <x>260</x>
          <y>70</y>
-         <width>191</width>
+         <width>221</width>
          <height>29</height>
         </rect>
        </property>
@@ -373,7 +375,7 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>nom   :</string>
+           <string>nom       :</string>
           </property>
          </widget>
         </item>
@@ -391,7 +393,7 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <rect>
          <x>260</x>
          <y>120</y>
-         <width>195</width>
+         <width>221</width>
          <height>29</height>
         </rect>
        </property>
@@ -402,7 +404,7 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>prenom:</string>
+           <string>prenom   :</string>
           </property>
          </widget>
         </item>
@@ -420,7 +422,7 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <rect>
          <x>260</x>
          <y>20</y>
-         <width>191</width>
+         <width>221</width>
          <height>29</height>
         </rect>
        </property>
@@ -431,7 +433,7 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>code   :</string>
+           <string>code      :</string>
           </property>
          </widget>
         </item>
@@ -449,7 +451,7 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <rect>
          <x>260</x>
          <y>170</y>
-         <width>191</width>
+         <width>221</width>
          <height>29</height>
         </rect>
        </property>
@@ -478,7 +480,7 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
         <rect>
          <x>260</x>
          <y>220</y>
-         <width>191</width>
+         <width>221</width>
          <height>29</height>
         </rect>
        </property>
@@ -489,7 +491,7 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>mail    :</string>
+           <string>mail        :</string>
           </property>
          </widget>
         </item>
@@ -517,6 +519,77 @@ font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
       <attribute name="title">
        <string>envoyer_mail</string>
       </attribute>
+      <widget class="QLabel" name="label_8">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>130</y>
+         <width>131</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
+       </property>
+       <property name="text">
+        <string>Message:</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="geometry">
+        <rect>
+         <x>740</x>
+         <y>310</y>
+         <width>111</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;
+background-color: rgb(255, 255, 127);</string>
+       </property>
+       <property name="text">
+        <string>envoyer</string>
+       </property>
+      </widget>
+      <widget class="QTextEdit" name="textEdit_2">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>170</y>
+         <width>551</width>
+         <height>291</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 255, 255);</string>
+       </property>
+      </widget>
+      <widget class="QWidget" name="">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>50</y>
+         <width>421</width>
+         <height>29</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_12">
+        <item>
+         <widget class="QLabel" name="label_7">
+          <property name="styleSheet">
+           <string notr="true">font: 75 12pt &quot;MS Shell Dlg 2&quot;;</string>
+          </property>
+          <property name="text">
+           <string>Donner le mail:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="lineEdit_3"/>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </widget>
     <widget class="QLabel" name="label_gcon">
@@ -557,7 +630,7 @@ background-color: rgb(197, 178, 236);</string>
       <enum>QTabWidget::Triangular</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <property name="tabsClosable">
       <bool>true</bool>
@@ -593,7 +666,7 @@ background-color: rgb(197, 178, 236);</string>
         <rect>
          <x>40</x>
          <y>50</y>
-         <width>231</width>
+         <width>301</width>
          <height>29</height>
         </rect>
        </property>
@@ -622,7 +695,7 @@ background-color: rgb(197, 178, 236);</string>
         <rect>
          <x>40</x>
          <y>100</y>
-         <width>232</width>
+         <width>301</width>
          <height>29</height>
         </rect>
        </property>
@@ -633,7 +706,7 @@ background-color: rgb(197, 178, 236);</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>donner le tarif:</string>
+           <string>donner le tarif       :</string>
           </property>
          </widget>
         </item>
@@ -651,7 +724,7 @@ background-color: rgb(197, 178, 236);</string>
         <rect>
          <x>40</x>
          <y>150</y>
-         <width>231</width>
+         <width>301</width>
          <height>29</height>
         </rect>
        </property>
@@ -662,7 +735,7 @@ background-color: rgb(197, 178, 236);</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>date_debut:</string>
+           <string>date_debut           :</string>
           </property>
          </widget>
         </item>
@@ -680,7 +753,7 @@ background-color: rgb(197, 178, 236);</string>
         <rect>
          <x>40</x>
          <y>200</y>
-         <width>231</width>
+         <width>301</width>
          <height>29</height>
         </rect>
        </property>
@@ -691,7 +764,7 @@ background-color: rgb(197, 178, 236);</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>date_fin     :</string>
+           <string>date_fin                :</string>
           </property>
          </widget>
         </item>
@@ -709,7 +782,7 @@ background-color: rgb(197, 178, 236);</string>
         <rect>
          <x>40</x>
          <y>250</y>
-         <width>233</width>
+         <width>301</width>
          <height>29</height>
         </rect>
        </property>
@@ -720,7 +793,7 @@ background-color: rgb(197, 178, 236);</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>donner le type:</string>
+           <string>donner le type       :</string>
           </property>
          </widget>
         </item>
@@ -739,8 +812,8 @@ background-color: rgb(197, 178, 236);</string>
       <widget class="QLabel" name="label_2">
        <property name="geometry">
         <rect>
-         <x>360</x>
-         <y>50</y>
+         <x>590</x>
+         <y>40</y>
          <width>351</width>
          <height>51</height>
         </rect>
@@ -857,7 +930,7 @@ background-color: rgb(197, 178, 236);</string>
         <rect>
          <x>240</x>
          <y>20</y>
-         <width>211</width>
+         <width>241</width>
          <height>29</height>
         </rect>
        </property>
@@ -868,7 +941,7 @@ background-color: rgb(197, 178, 236);</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>identifiant:</string>
+           <string>identifiant :</string>
           </property>
          </widget>
         </item>
@@ -886,7 +959,7 @@ background-color: rgb(197, 178, 236);</string>
         <rect>
          <x>240</x>
          <y>60</y>
-         <width>211</width>
+         <width>241</width>
          <height>29</height>
         </rect>
        </property>
@@ -897,7 +970,7 @@ background-color: rgb(197, 178, 236);</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>tarif     :</string>
+           <string>tarif          :</string>
           </property>
          </widget>
         </item>
@@ -915,7 +988,7 @@ background-color: rgb(197, 178, 236);</string>
         <rect>
          <x>240</x>
          <y>110</y>
-         <width>212</width>
+         <width>241</width>
          <height>29</height>
         </rect>
        </property>
@@ -944,7 +1017,7 @@ background-color: rgb(197, 178, 236);</string>
         <rect>
          <x>240</x>
          <y>160</y>
-         <width>211</width>
+         <width>241</width>
          <height>29</height>
         </rect>
        </property>
@@ -955,7 +1028,7 @@ background-color: rgb(197, 178, 236);</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>date fin   :</string>
+           <string>date fin     :</string>
           </property>
          </widget>
         </item>
@@ -973,7 +1046,7 @@ background-color: rgb(197, 178, 236);</string>
         <rect>
          <x>240</x>
          <y>210</y>
-         <width>211</width>
+         <width>241</width>
          <height>29</height>
         </rect>
        </property>
@@ -984,7 +1057,7 @@ background-color: rgb(197, 178, 236);</string>
            <string notr="true">font: 75 10pt &quot;MS Shell Dlg 2&quot;;</string>
           </property>
           <property name="text">
-           <string>type    :</string>
+           <string>type          :</string>
           </property>
          </widget>
         </item>
