--- a/login.ui
+++ b/login.ui
@@ -35,14 +35,15 @@
     <widget class="QPushButton" name="pushButton_log">
      <property name="geometry">
       <rect>
-       <x>450</x>
-       <y>290</y>
-       <width>111</width>
+       <x>460</x>
+       <y>300</y>
+       <width>101</width>
        <height>41</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(205, 223, 255);
+background-color: rgb(255, 255, 127);
 font: 75 12pt &quot;MS Shell Dlg 2&quot;;
 </string>
      </property>
