--- a/gestion_clients.ui
+++ b/gestion_clients.ui
@@ -268,6 +268,32 @@ background-color: rgb(206, 178, 16);
         <string>Ajouter Abonné</string>
        </property>
       </widget>
+      <widget class="QLabel" name="label_9">
+       <property name="geometry">
+        <rect>
+         <x>480</x>
+         <y>360</y>
+         <width>321</width>
+         <height>81</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>time</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_10">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>360</y>
+         <width>301</width>
+         <height>101</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Date:</string>
+       </property>
+      </widget>
      </widget>
      <widget class="QWidget" name="tab_4">
       <attribute name="title">
